internal/compiler/checker/testdata/valid/Parent.tue
<template>
	<main>
		<UserBadge :name="Name" :isAdmin='Role == "admin"' @select="selectUser" @tags="selectTags" />
			<ul>
				<li v-for="todo in visibleTodos()" :key="todo.ID">{{ todo.Text }}</li>
			</ul>
		<input v-model="Query" />
		<button type="button" @click="increment">Increment</button>
		<p v-if="Ready">Count: {{ Count }}</p>
		<article v-html="Body">{{ missing }}</article>
	</main>
</template>

<script lang="go">
package fixtures

import tue "github.com/norunners/tue"

type Todo struct {
	ID   int
	Text string
}

type Parent struct {
	tue.Comp[struct {
		Name  string          `state:""`
		Role  string          `state:""`
		Todos []Todo          `state:""`
		Query string          `state:""`
		Ready bool            `state:""`
		Body  tue.TrustedHTML `state:""`
		Count int             `state:""`
	}]
}

func (p *Parent) increment() {}

func (p *Parent) selectUser(name string) {}

func (p *Parent) selectTags(tags []string) {}

func (p *Parent) visibleTodos() []Todo {
	return p.Todos()
}
</script>
